--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.5.2",
     "d3": "^6.2.0",
+    "datamaps": "^0.5.9",
+    "env-cmd": "^10.1.0",
+    "google-map-react": "^2.1.6",
+    "mapbox-gl": "^1.12.0",
+    "mdbreact": "^4.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.21",
+    "react-mapbox-gl": "^4.8.6",
     "react-modal": "^3.11.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-scripts": "3.4.3",
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.0.1"
